# ot-harjoitustyo

./: README.md
dokumentaatio/: maarittelydokumentti.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/: maksukortti.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli  monopoli.md  sekvenssikaavio  sekvenssikaavio.md
memory-game/: .coveragerc  .pylintrc  pyproject.toml  tasks.py
memory-game/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  tyoaikakirjanpito.md
memory-game/src/: index.py  main.py  memorygame.py  ui.py
memory-game/src/tests/: memorygame_test.py
src/: pyproject.toml
tetris/dokumentaatio/: tyoaikakirjanpito.md
