[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Minttu Gomez <minttu.jamsa@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"
coverage = "^7.4.4"
invoke = "^2.2.0"
pytest = "^8.1.1"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
autopep8 = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
